--- a/sc/htmlku/snakepixel_style.css
+++ b/sc/htmlku/snakepixel_style.css
@@ -11,7 +11,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #E3F2FD;
+  background: #757575;
 }
 .wrapper {
   width: 65vmin;
